Fixed header on mobile 3

--- a/blog/static/customStyle.scss
+++ b/blog/static/customStyle.scss
@@ -285,13 +285,13 @@ iframe {
 
     #header {
         .home {
-            padding-top: 19px;
-            font-size: 0.8em;
+            padding-top: 17px;
+            font-size: 0.9em;
         }
 
         .header-links {
-            padding-top: 19px;
-            font-size: 0.8em;
+            padding-top: 17px;
+            font-size: 0.9em;
         }
     }
 
